--- a/ajapaik-ui/src/main/webapp/index.html
+++ b/ajapaik-ui/src/main/webapp/index.html
@@ -22,9 +22,9 @@
 		<input type="submit" name="search" value="Search" /> 
 	    </form>
 	    <div id="actions">
-		<a href="#" class="btn" id="action1"><span>Action 1</span></a>
-		<a href="#" class="btn" id="action2"><span>Action 2</span></a>
-		<a href="#" class="btn" id="action3"><span>Action 3</span></a>
+		<a href="#" class="btn" id="csv"><span>CSV</span></a>
+		<a href="#" class="btn" id="harvest"><span>Harvest</span></a>
+		<a href="#" class="btn" id="index"><span>Index</span></a>
 	    </div>
 	    <div id="search-results">
 		<ul class="items">
