--- a/ajapaik-ui/src/main/webapp/index.html
+++ b/ajapaik-ui/src/main/webapp/index.html
@@ -27,6 +27,9 @@
 				<a href="#" class="btn" id="harvest"><span>Harvest</span></a>
 				<a href="#" class="btn" id="index"><span>Index</span></a>
 				<a href="#" class="btn" id="selectAll"><span>Select all</span></a>
+				
+				<span class="info" id="totalResultCount"></span>
+				<span class="info" id="selectionCount"></span>
 		    </div>
 	    </div>
 	    <div id="search-results">
