--- a/ajapaik-ui/src/main/webapp/index.html
+++ b/ajapaik-ui/src/main/webapp/index.html
@@ -20,8 +20,10 @@
 		<div id="search-header">
 			<form id="search-form" action="" method="POST">
 			    <input type="text" id="search" name="d" value="" placeholder="Description" />
-			    <input type="text" id="search" name="i" value="" placeholder="Institution" />
 			    <input type="text" id="search" name="a" value="" placeholder="Autor" />
+			    <input type="text" id="search" name="n" value="" placeholder="Number" />
+			    <input type="text" id="search" name="i" value="" placeholder="Institution" />
+			    
 			    <input type="submit" name="search" value="Search" /> 
 			</form>
 		    <div id="actions">
