--- a/ajapaik-ui/src/main/webapp/test.html
+++ b/ajapaik-ui/src/main/webapp/test.html
@@ -1,10 +1,17 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="test.css">
-<script type="text/javascript" src="jquery.min.js"></script>
-<script type="text/javascript" src="jquery.row-grid.js"></script>
-<script type="text/javascript" src="test.js"></script>
+
+	<title>Ajapaiga valimimoodul</title>
+	
+	<meta charset="UTF-8">
+	
+	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="test.css">
+	
+	<script type="text/javascript" src="jquery.min.js"></script>
+	<script type="text/javascript" src="jquery.row-grid.js"></script>
+	<script type="text/javascript" src="jquery.tooltip.js"></script>
+	<script type="text/javascript" src="test.js"></script>
 
 </head>
 <body>
@@ -64,7 +71,13 @@
 							<button id="search" type="submit" class="btn btn-primary" style="float: right;">Otsi</button>
 						</div>
 					</div>
-
+					
+					<div class="form-group">
+						<div class="col-sm-11"  style="width: 91%">
+								<input value="" id="luceneQuery" placeholder="Lucene Query" class="form-control">
+						</div>
+					</div>
+					
 					<div class="form-group">
 						<div class="col-sm-1">
 							<div class="input-group">
@@ -95,7 +108,7 @@
 
 					<div class="form-group">
 						<div class="col-sm-10">
-							<button type="button" class="btn btn-primary" id="select-all">Vali k6ik</button>
+							<button type="button" class="btn btn-primary" id="select-all">Vali kõik</button>
 						</div>
 						<div class="col-sm-2">
 							<div style="float: right; margin-right: 5px;">
@@ -111,7 +124,7 @@
 					<div class="form-group">
 						<div class="col-sm-10" style="margin-top: 15px">
 							<button type="button" class="btn btn-primary" id="download">Lae alla</button>
-							<button type="button" class="btn btn-danger" id="select-none">Tyhista valik</button>
+							<button type="button" class="btn btn-danger" id="select-none">Tühista valik</button>
 						</div>
 						<div class="col-sm-2">
 							<div style="float: right; margin-right: 5px;">
@@ -128,7 +141,7 @@
 
 	<div id="result-view" style="display: none;"></div>
 	
-	<div id="set-view" style="display: none;" class="col-sm-12"></div>
+	<div id="set-view" style="display: none;"></div>
 	
 	<div id="backdrop" style="display: none;"><img class="loader" src="ajax_loader_blue_64.gif"></div>
 </body>
