Institutions (MKA. DIGAR, MUIS)

--- a/ajapaik-ui/src/main/webapp/test.html
+++ b/ajapaik-ui/src/main/webapp/test.html
@@ -15,6 +15,7 @@
 
 </head>
 <body>
+
 	<div class="header">
 
 		<ul class="nav nav-tabs">
@@ -82,7 +83,7 @@
 						<div class="col-sm-1">
 							<div class="input-group">
 								<div class="checkbox">
-									<label><input type="checkbox">MuIS</label>
+									<label><input type="checkbox" id="MUSEUM">MuIs</label>
 								</div>
 							</div>
 						</div>
@@ -90,14 +91,14 @@
 						<div class="col-sm-1">
 							<div class="input-group">
 								<div class="checkbox">
-									<label><input type="checkbox">Muinas</label>
+									<label><input type="checkbox" id="ARCHIVE">MKA</label>
 								</div>
 							</div>
 						</div>
 						<div class="col-sm-1">
 							<div class="input-group">
 								<div class="checkbox">
-									<label><input type="checkbox">Digar</label>
+									<label><input type="checkbox" id="LIBRARY">Digar</label>
 								</div>
 							</div>
 						</div>
