--- a/ajapaik-ui/src/main/webapp/index.html
+++ b/ajapaik-ui/src/main/webapp/index.html
@@ -6,12 +6,12 @@
 	<meta charset="UTF-8">
 	
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="test.css">
+	<link rel="stylesheet" type="text/css" href="ajapaik.css">
 	
 	<script type="text/javascript" src="jquery.min.js"></script>
 	<script type="text/javascript" src="jquery.row-grid.js"></script>
 	<script type="text/javascript" src="jquery.tooltip.js"></script>
-	<script type="text/javascript" src="test.js"></script>
+	<script type="text/javascript" src="ajapaik.js"></script>
 
 </head>
 <body>
