--- a/ajapaik-ui/src/main/webapp/index.html
+++ b/ajapaik-ui/src/main/webapp/index.html
@@ -62,7 +62,7 @@
 							</div>
 							
 							<div class="col-sm-1">
-								<button id="search" type="submit" class="btn btn-primary" style="float: right;">Otsi</button>
+								<button id="search-button" type="button" class="btn btn-primary" style="float: right;">Otsi</button>
 							</div>
 						</div>
 						
