--- a/ajapaik-ui/src/main/webapp/index.html
+++ b/ajapaik-ui/src/main/webapp/index.html
@@ -129,7 +129,7 @@
 				<div id="set-form" style="display: none;">
 					<div class="form-group">
 						<div class="col-sm-10" style="margin-top: 15px">
-							<button type="button" class="btn btn-primary" id="download">Lae alla</button>
+							<button type="button" class="btn btn-primary" id="download">Saada ajapaika</button>
 							<button type="button" class="btn btn-danger" id="select-none">Tühista valik</button>
 						</div>
 						<div class="col-sm-2">
