refactor, source cache

--- a/ajapaik-ui/src/main/webapp/index.html
+++ b/ajapaik-ui/src/main/webapp/index.html
@@ -5,15 +5,15 @@
 	
 	<meta charset="UTF-8">
 	
-	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="ajapaik.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/ajapaik.css">
 	
-	<script type="text/javascript" src="jquery.min.js"></script>
-	<script type="text/javascript" src="jquery.row-grid.js"></script>
-	<script type="text/javascript" src="jquery.tooltip.js"></script>
-	<script type="text/javascript" src="underscore.min.js"></script>
-	<script type="text/javascript" src="bootstrap.min.js"></script>
-	<script type="text/javascript" src="ajapaik.js"></script>
+	<script type="text/javascript" src="assets/js/jquery.min.js"></script>
+	<script type="text/javascript" src="assets/js/jquery.row-grid.js"></script>
+	<script type="text/javascript" src="assets/js/jquery.tooltip.js"></script>
+	<script type="text/javascript" src="assets/js/underscore.min.js"></script>
+	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="assets/js/ajapaik.js"></script>
 
 </head>
 <body>
@@ -67,7 +67,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Sulge</button>
-					<button type="button" class="btn btn-primary"><img src="ajax-loader.gif" height="16" style="margin-right: 5px; display: none;" id="loader">Saada</button>
+					<button type="button" class="btn btn-primary"><img src="assets/img/ajax-loader.gif" height="16" style="margin-right: 5px; display: none;" id="loader">Saada</button>
 				</div>
 			</div>
 		</div>
@@ -190,8 +190,8 @@
 						</div>
 						<div class="col-sm-2">
 							<div style="float: right; margin-right: 5px;">
-								<img id="thumbnails" src="large-thumbnails-48.png" style="border: 1px solid; padding: 2px;">
-								<img id="list" src="list-with-thumbnails-48.png" style="border: 1px solid; padding: 2px;">
+								<img id="thumbnails" src="assets/img/large-thumbnails-48.png" style="border: 1px solid; padding: 2px;">
+								<img id="list" src="assets/img/list-with-thumbnails-48.png" style="border: 1px solid; padding: 2px;">
 							</div>
 						</div>
 					</div>				
@@ -204,6 +204,6 @@
 	
 	<div id="set-view" style="display: none;"></div>
 	
-	<div id="backdrop" style="display: none;"><img class="loader" src="ajax_loader_blue_64.gif"></div>
+	<div id="backdrop" style="display: none;"><img class="loader" src="assets/img/ajax_loader_blue_64.gif"></div>
 </body>
 </html>
