add dspace checkbox for valimimoodul ui

--- a/ajapaik-ui/src/main/webapp/index.html
+++ b/ajapaik-ui/src/main/webapp/index.html
@@ -156,6 +156,13 @@
 									</div>
 								</div>
 							</div>
+							<div class="col-sm-1">
+								<div class="input-group">
+									<div class="checkbox">
+										<label><input type="checkbox" id="DSPACE">UTLIB</label>
+									</div>
+								</div>
+							</div>
 							<div id="task-select" class="col-sm-2">
 								<div class="input-group">
 								
