--- a/ajapaik-ui/src/main/webapp/index.html
+++ b/ajapaik-ui/src/main/webapp/index.html
@@ -88,39 +88,31 @@
   					<div class="panel-body">
 						<div class="form-group">
 	
-							<div class="col-sm-1 w-11">
+							<div class="col-sm-1 w-13">
 								<input value="" id="fullSearch" placeholder="Full Search" class="form-control">
 							</div>
 	
-							<div class="col-sm-1 w-11">
+							<div class="col-sm-1 w-13">
 									<input value="" id="id" placeholder="ID" class="form-control">
 							</div>
 	
-							<div class="col-sm-1 w-11">
+							<div class="col-sm-1 w-13">
 									<input value="" id="what" placeholder="Title" class="form-control">
 							</div>
 
-							<div class="col-sm-1 w-11">
-								<select id="collectionType" class="form-control">
-									<option value="PHOTOS">PHOTOS</option>
-									<option value="PAINTINGS">PAINTINGS</option>
-									<option value="GRAPHIC_ART">GRAPHIC ART</option>
-								</select>
-							</div>
-
-							<div class="col-sm-1 w-11">
+							<div class="col-sm-1 w-13">
 									<input value="" id="description" placeholder="Description" class="form-control">
 							</div>
 	
-							<div class="col-sm-1 w-11">
+							<div class="col-sm-1 w-13">
 									<input value="" id="who" placeholder="Author" class="form-control">
 							</div>
 	
-							<div class="col-sm-1 w-11">
+							<div class="col-sm-1 w-13">
 									<input value="" id="from" placeholder="Institution" class="form-control">
 							</div>
 	
-							<div class="col-sm-1 w-11">
+							<div class="col-sm-1 w-13">
 									<input value="" id="number" placeholder="Number" class="form-control">
 							</div>
 							
@@ -130,10 +122,35 @@
 						</div>
 						
 						<div class="form-group">
-							<div class="col-sm-11 w-88">
+							<div class="col-sm-11"  style="width: 91%">
 									<input value="" id="luceneQuery" placeholder="Lucene Query" class="form-control">
 							</div>
 						</div>
+
+						<div class="form-group">
+							<div class="col-sm-1">
+								<div class="input-group">
+									<div class="checkbox">
+										<label><input type="checkbox" id="PHOTOS">PHOTOS</label>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-1">
+								<div class="input-group">
+									<div class="checkbox">
+										<label><input type="checkbox" id="PAINTINGS">PAINTINGS</label>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-1">
+								<div class="input-group">
+									<div class="checkbox">
+										<label><input type="checkbox" id="GRAPHIC_ART">GRAPHIC ART</label>
+									</div>
+								</div>
+							</div>
+						</div>
+
 						<div class="form-group">
 							<div class="col-sm-1">
 								<div class="input-group">
@@ -224,4 +241,8 @@
 	
 	<div id="result-view" style="display: none;"></div>
 	
-	<div id="set-view" style="display: 
+	<div id="set-view" style="display: none;"></div>
+
+	<div id="backdrop" style="display: none;"><img class="loader" src="assets/img/ajax_loader_blue_64.gif"></div>
+</body>
+</html>
