--- a/ajapaik-ui/src/main/webapp/index.html
+++ b/ajapaik-ui/src/main/webapp/index.html
@@ -149,6 +149,13 @@
 									</div>
 								</div>
 							</div>
+							<div class="col-sm-1">
+								<div class="input-group">
+									<div class="checkbox">
+										<label><input type="checkbox" id="PERSONA">PERSONA</label>
+									</div>
+								</div>
+							</div>
 						</div>
 
 						<div class="form-group">
