--- a/ajapaik-ui/src/main/webapp/index.html
+++ b/ajapaik-ui/src/main/webapp/index.html
@@ -14,6 +14,7 @@
 	<script type="text/javascript" src="assets/js/underscore.min.js"></script>
 	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="assets/js/ajapaik.js"></script>
+	<script type="text/javascript" src="assets/js/failedSets.js"></script>
 
 </head>
 <body>
@@ -78,6 +79,7 @@
 		<ul class="nav nav-tabs">
 			<li class="active" id="search"><a href="#">Otsing <span class="badge">0</span></a></li>
 			<li id="set"><a href="#">Valim <span class="badge">0</span></a></li>
+			<li id="harvester"><a href="#">Harvester</a></li>
 		</ul>
 
 		<div id="panel">
@@ -249,6 +251,11 @@
 	<div id="result-view" style="display: none;"></div>
 	
 	<div id="set-view" style="display: none;"></div>
+
+	<div id="harvester-view" style="display: none;">
+		<h3>Failed sets</h3>
+		<div id="failed-sets"></div>
+	</div>
 
 	<div id="backdrop" style="display: none;"><img class="loader" src="assets/img/ajax_loader_blue_64.gif"></div>
 </body>
