--- a/ajapaik-ui/src/main/webapp/index.html
+++ b/ajapaik-ui/src/main/webapp/index.html
@@ -269,7 +269,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label>Last harvest date</label>
-						<input id="lastHarvestDate" type="text" class="form-control">
+						<input id="lastHarvestDate" type="text" class="form-control" placeholder="Leave empty to do full harvest">
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -281,7 +281,7 @@
 			</div>
 			<div class="form-group">
 				<label>Sets to use</label>
-				<input id="setsToUse" type="text" class="form-control">
+				<input id="setsToUse" type="text" class="form-control" placeholder="Leave empty to harvest all sets">
 			</div>
 
 			<button class="btn btn-primary">Create</button>
