--- a/ajapaik-ui/src/main/webapp/index.html
+++ b/ajapaik-ui/src/main/webapp/index.html
@@ -6,6 +6,7 @@
 	<meta charset="UTF-8">
 	
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap-datepicker.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/ajapaik.css">
 	
 	<script type="text/javascript" src="assets/js/jquery.min.js"></script>
@@ -13,6 +14,8 @@
 	<script type="text/javascript" src="assets/js/jquery.tooltip.js"></script>
 	<script type="text/javascript" src="assets/js/underscore.min.js"></script>
 	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="assets/js/moment.min.js"></script>
+	<script type="text/javascript" src="assets/js/bootstrap-datepicker.min.js"></script>
 	<script type="text/javascript" src="assets/js/ajapaik.js"></script>
 	<script type="text/javascript" src="assets/js/failedSets.js"></script>
 	<script type="text/javascript" src="assets/js/harvester.js"></script>
