--- a/ajapaik-ui/src/main/webapp/index.html
+++ b/ajapaik-ui/src/main/webapp/index.html
@@ -284,7 +284,7 @@
 			</div>
 			<div class="form-group">
 				<label>Sets to use</label>
-				<input id="setsToUse" type="text" class="form-control" placeholder="Leave empty to harvest all sets">
+				<input id="setsToUse" type="text" class="form-control" placeholder="Separated by comma. Leave empty to harvest all sets">
 			</div>
 
 			<button class="btn btn-primary">Create</button>
