Fill systems dropdown and prefill last harvest date if set

--- a/ajapaik-ui/src/main/webapp/index.html
+++ b/ajapaik-ui/src/main/webapp/index.html
@@ -265,9 +265,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<label>Infosystem</label>
-					<select id="harvesters" class="form-control">
-						<option value="MuIS">Muis</option>
-					</select>
+					<select id="harvesters" class="form-control"></select>
 				</div>
 				<div class="col-md-4">
 					<div class="form-group">
