--- a/ajapaik-ui/src/main/webapp/index.html
+++ b/ajapaik-ui/src/main/webapp/index.html
@@ -257,8 +257,8 @@
 	<div id="set-view" style="display: none;"></div>
 
 	<div id="harvester-view" style="display: none;">
-		<div class="alert alert-success hidden">
-			Harvester created!
+		<div class="alert alert-success" style="display: none">
+			<strong>Harvester created!</strong>
 		</div>
 		<h3>Create harvester</h3>
 		<form id="create-harvester">
