--- a/ajapaik-ui/src/main/webapp/index.html
+++ b/ajapaik-ui/src/main/webapp/index.html
@@ -289,6 +289,7 @@
 		</form>
 
 		<h3>Failed sets</h3>
+		<img src="assets/img/ajax-loader.gif" id="sets-loader" height="16" style="margin-right: 5px;">
 		<div id="failed-sets"></div>
 	</div>
 
